Fix scrolling on mobile, disable dragging categories even for desktop

--- a/frontend/styles.scss
+++ b/frontend/styles.scss
@@ -12,7 +12,11 @@
   text-transform: uppercase;
 }
 
-[matTooltip] {
+[mattooltipposition] {
+  touch-action: auto !important;
+}
+
+[matripple] {
   touch-action: auto !important;
 }
 
